--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>留言板首页</title>
+        <title>留言板首頁</title>
 
         <style>
             * {
@@ -39,7 +39,7 @@
     </head>
     <body>
         <nav>
-            <a href="/message_board">留言板</a><a href="/login">登录</a><a href="/reg">注册</a>
+            <a href="/message_board">留言板</a><a href="/login">登入</a><a href="/reg">註冊</a>
         </nav>
     </body>
 </html>
