--- a/templates/reg.html
+++ b/templates/reg.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>欢迎注册！</title>
+        <title>歡迎註冊!</title>
 
         <style>
             * {
@@ -38,13 +38,13 @@
         <div id="reg_form">
             <form action="/reg" method="POST">
                 <table>
-                    <tr><td>用户名：</td><td><input type="text" id="uname" name="uname" placeholder="用户名" autofocus><span id="uname_tips"></span></td></tr>
-                    <tr><td>密码：</td><td><input type="password" id="upass" name="upass" placeholder="登录密码"></td></tr>
-                    <tr><td>确认密码：</td><td><input type="password" id="upass2" name="upass2" placeholder="确认密码"></td></tr>
-                    <tr><td>手机号：</td><td><input type="text" id="phone" name="phone" placeholder="手机号"><button type="button" id="send_sms_code">发送验证码</button></td></tr>
-                    <tr><td>验证码：</td><td><input type="text" id="verify_code" name="verify_code" placeholder="短信验证码"></td></tr>
-                    <tr><td>邮箱：</td><td><input type="email" id="email" name="email" placeholder="电子邮箱""></td></tr>
-                    <tr><td></td><td><button type="submit">注册</button></td></tr>
+                    <tr><td>使用者名稱：</td><td><input type="text" id="uname" name="uname" placeholder="使用者名稱" autofocus><span id="uname_tips"></span></td></tr>
+                    <tr><td>密碼：</td><td><input type="password" id="upass" name="upass" placeholder="密碼"></td></tr>
+                    <tr><td>確認密碼：</td><td><input type="password" id="upass2" name="upass2" placeholder="確認密碼"></td></tr>
+                    <tr><td>手機號碼：</td><td><input type="text" id="phone" name="phone" placeholder="手機號碼"><button type="button" id="send_sms_code">發驗證碼</button></td></tr>
+                    <tr><td>驗證碼</td><td><input type="text" id="verify_code" name="verify_code" placeholder="驗證碼"></td></tr>
+                    <tr><td>電子郵件：</td><td><input type="email" id="email" name="email" placeholder="電子郵件""></td></tr>
+                    <tr><td></td><td><button type="submit">註冊</button></td></tr>
                 </table>
             </form>
         </div>
