--- a/templates/message_board.html
+++ b/templates/message_board.html
@@ -26,12 +26,14 @@
         {% endif %}
         <hr>
         {% for m in messages %}
+        
         <div class="message">
+            <a href="/messages_replys?post_id={{ m[3] }}">
             <div><img src="/static/img/default.png" class="profileimg"><span class="uname">{{ m[0] }}</span>
             <br><br>
             <span class="pub_time">{{ m[1] }}</span></div>
             <p class="content">{{ m[2] }}</p>
-        </div>
+        </div></a>
         {% endfor %}
 
 
