--- a/templates/replys.html
+++ b/templates/replys.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>留言板</title>
+    <title>匿名曙光留言板</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8" />
     <link rel="stylesheet" href="./static/css/style.css" />
+    <link rel="canonical" href="https://nicewhite.eu.org/message_board"/>
 </head>
 <body>
 <div class="navbar">
@@ -41,7 +42,7 @@
 </div>
 {% else %}
 
-<p id="wanttologin">想回覆?<a href="/login">登入</a>！</p>
+<p id="wanttologin">想回覆?<a href="/login">登入</a>或<a href="/reg">註冊</a>！</p>
 {% endif %}
 
 
