--- a/templates/login.html
+++ b/templates/login.html
@@ -3,48 +3,25 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>歡迎登入!</title>
-
-        <style>
-            * {
-                margin: 0;
-                padding: 0;
-            }
-
-            input {
-                margin-right: 5px;
-                height: 30px;
-                padding: 0 5px;
-            }
-
-            button {
-                height: 30px;
-                padding: 0 5px;
-            }
-
-            #reg_form {
-                margin: 50px auto;
-                width: 600px;
-            }
-
-            #reg_form td {
-               padding-top: 10px;
-            }
+        <title>匿名曙光留言板 | 歡迎登入!</title>
+        <link rel="stylesheet" href="./static/css/style.css" />
         </style>
         <script src="{{ url_for('static', filename='js/common.js') }}"></script>
     </head>
     <body>
-        {% if login_fail %}
-        <script>
-            alert("使用者名稱或密碼錯誤，請重新登入!");
-        </script>
-        {% endif %}
+        <div class="navbar">
+            <a href="/"><img src="./static/img/logo.png" alt="SGGS logo" >
+            <h1 >Anonymous</h1></a>
+          </div>
         <div id="reg_form">
+            
             <form action="/login" method="POST">
                 <table>
                     <tr><td>使用者名稱：</td><td><input type="text" id="uname" name="uname" placeholder="使用者名稱" autofocus></td></tr>
                     <tr><td>密碼：</td><td><input type="password" id="upass" name="upass" placeholder="密碼"></td></tr>
-                    <tr><td></td><td><button type="submit">登入</button></td></tr>
+                    <tr><td></td><td><button type="submit">登入</button>
+                    <button type="button" onclick="location.href='/reg'">註冊</button></td></tr>
+                    
                 </table>
             </form>
         </div>
