--- a/templates/reg.html
+++ b/templates/reg.html
@@ -3,36 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>歡迎註冊!</title>
-
-        <style>
-            * {
-                margin: 0;
-                padding: 0;
-            }
-
-            input {
-                margin-right: 5px;
-                height: 30px;
-                padding: 0 5px;
-            }
-
-            button {
-                height: 30px;
-                padding: 0 5px;
-            }
-
-            #reg_form {
-                margin: 50px auto;
-                width: 600px;
-            }
-
-            #reg_form td {
-               padding-top: 10px;
-            }
-        </style>
+        <title>匿名曙光留言板 | 歡迎註冊!</title>
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     </head>
     <body>
+        <div class="navbar">
+            <a href="/"><img src="./static/img/logo.png" alt="SGGS logo" >
+            <h1 >Anonymous</h1></a>
+          </div>
         <div id="reg_form">
             <form action="/reg" method="POST">
                 <table>
