--- a/static/css/style.css
+++ b/static/css/style.css
@@ -39,6 +39,7 @@ body{
 }
 
 #wanttologin {
+    margin-right: 10px;
     margin-top: 40px;
     margin-left: 20px;
     padding: 10px;
@@ -99,6 +100,7 @@ hr{
 .message{
     margin-top: 40px;
     margin-left: 20px;
+    margin-right: 10px;
     padding: 10px;
     font-family: 'Inter', sans-serif;
     font-size: 20px;
@@ -157,6 +159,7 @@ hr{
 #reg_form{
     margin-top: 40px;
     margin-left: 20px;
+    margin-right: 10px;
     padding: 10px;
     font-family: 'Inter', sans-serif;
     font-size: 20px;
@@ -167,7 +170,7 @@ hr{
 }
 
 #reg_form input{
-    width: 100%;
+    width: 80%;
     padding: 10px;
     margin: 10px 0;
     border-radius: 57px;
