--- a/templates/message_board.html
+++ b/templates/message_board.html
@@ -18,12 +18,13 @@
             <form action="/message_board" method="POST">
                 <table>
                     <tr><td>留言：</td><td><textarea id="content" name="content" placeholder="請輸入留言內容"></textarea></td></tr>
-                    <tr><td></td><td><button type="submit">送出</button></td></tr>
+                    <tr><td></td><td><button type="submit">送出</button>&emsp;<a href="/post_anonymous">前往匿名區</a></td></tr>
                 </table>
             </form>
         </div>
         {% else %}
-        <p id="wanttologin">想留言?<a href="/login">登入</a>或<a href="/reg">註冊</a>！</p>
+        <p id="wanttologin">想留言?<a href="/login">登入</a>或<a href="/reg">註冊</a>！或是你可以<a href="/post_anonymous">匿名留言</a>！
+        </p>
         {% endif %}
         <hr>
         {% for m in messages %}
