--- a/static/css/style.css
+++ b/static/css/style.css
@@ -247,3 +247,22 @@ hr{
     text-decoration: none;
     color: #ffffff;
 }
+
+#privacy{
+    margin-top: 40px;
+    margin-left: 20px;
+    margin-right: 20px;
+    padding: 20px;
+    font-family: 'Inter', sans-serif;
+    font-size: 20px;
+    color: #afafaf;;
+    background-color: #404040;
+    border: 2px solid #404040;
+    border-radius: 57px;
+    word-wrap: break-word;
+}
+
+#privacy a{
+    text-decoration: none;
+    color: #ffffff;
+}
