--- a/templates/post_anonymous.html
+++ b/templates/post_anonymous.html
@@ -16,7 +16,7 @@
 <div id="post_anonymous_warning">
     <p>
         你正在以匿名的方式留言，請注意你的言論！<br>
-        在匿名留言之前，請先閱讀<a href="/tos">使用條款</a>。<br>
+        在匿名留言之前，請先閱讀<a href="/privacy_policy">隱私權條款</a>。<br>
         若您已登入，您可以使用"匿名"的身分回復留言。
     </p>
 </div>
