--- a/templates/reg.html
+++ b/templates/reg.html
@@ -20,7 +20,7 @@
                     <tr><td>確認密碼：</td><td><input type="password" id="upass2" name="upass2" placeholder="確認密碼"></td></tr>
                     <tr><td>電子郵件：</td><td><input type="email" id="email" name="email" placeholder="電子郵件"><button type="button" id="send_email_code">發驗證碼</button></td></tr>
                     <tr><td>驗證碼</td><td><input type="text" id="verify_code" name="verify_code" placeholder="驗證碼"></td></tr>
-                    <tr><td>註冊前請先閱讀<a href="/tos">使用條款</a></td></tr>
+                    <tr><td>註冊前請先閱讀<a href="/privacy_policy">隱私權條款</a></td></tr>
                     <tr><td><button type="submit">註冊</button></td></tr>
                 </table>
             </form>
