--- a/templates/message_board.html
+++ b/templates/message_board.html
@@ -35,6 +35,7 @@
             <br><br>
             <span class="pub_time">{{ m[1] }}</span></div>
             <p class="content">{{ m[2] }}</p>
+            <p class="reply">回覆數:{{ m[4] }}</p>
         </div></a>
         {% endfor %}
 
