--- a/templates/post_anonymous.html
+++ b/templates/post_anonymous.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>匿名曙光留言板</title>
+    <title>匿名曙光留言板 | 匿名留言</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8" />
     <link rel="stylesheet" href="./static/css/style.css" />
