changed name to avoid confution

--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -10,7 +10,7 @@
 <body>
 <div class="navbar">
     <a href="/"><img src="./static/img/logo.png" alt="SGGS logo" >
-    <h1>Anonymous</h1></a>
+    <h1>匿名留言板</h1></a>
 </div>
 <p id="privacy">
     非常歡迎您光臨「匿名曙光留言板」（以下簡稱本網站），為了讓您能夠安心的使用本網站的各項服務與資訊，特此向您說明本網站的隱私權保護政策，以保障您的權益，請您詳閱下列內容：<br>
