--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
     <body>
         <div class="navbar">
             <a href="/"><img src="./static/img/logo.png" alt="SGGS logo" >
-            <h1 >Anonymous</h1></a>
+            <h1 >匿名留言板</h1></a>
           </div>
         <div id="reg_form">
             
