--- a/templates/message_board.html
+++ b/templates/message_board.html
@@ -34,7 +34,9 @@
             <div><img src="/static/img/default.png" class="profileimg"><span class="uname">{{ m[0] }}</span>
             <br><br>
             <span class="pub_time">{{ m[1] }}</span></div>
+{% autoescape false %}
             <p class="content">{{ m[2] }}</p>
+{% endautoescape %}
             <p class="reply">回覆數:{{ m[4] }}</p>
         </div></a>
         {% endfor %}
