--- a/templates/replys.html
+++ b/templates/replys.html
@@ -18,7 +18,9 @@
             <div><img src="/static/img/default.png" class="profileimg"><span class="uname">{{ m[0] }}</span>
             <br><br>
             <span class="pub_time">{{ m[1] }}</span></div>
+{% autoescape false %}
             <p class="content">{{ m[2] }}</p>
+{% endautoescape %}
         </div>
         {% endfor %}
 <hr>
@@ -27,7 +29,9 @@
             <div><img src="/static/img/default.png" class="profileimg"><span class="uname">{{ m[0] }}</span>
             <br><br>
             <span class="pub_time">{{ m[1] }}</span></div>
+{% autoescape false %}
             <p class="content">{{ m[2] }}</p>
+{% endautoescape %}
         </div>
         {% endfor %}
 
