--- a/static/css/style.css
+++ b/static/css/style.css
@@ -194,6 +194,16 @@ hr{
     border: #FFFFFF 2px solid;
 }
 
+
+@media  screen and (min-width: 800px){
+    html{
+        justify-content: center;
+        width: 80%;
+        margin-left: auto;
+  margin-right: auto;
+    }
+}
+
 #reg_form{
     margin-top: 40px;
     margin-left: 20px;
