--- a/templates/message_board.html
+++ b/templates/message_board.html
@@ -27,20 +27,28 @@
         </p>
         {% endif %}
         <hr>
+        <div id="message_area">
         {% for m in messages %}
         
         <div class="message">
-            <a href="/messages_replys?post_id={{ m[3] }}">
+            <a class="messagelink" href="messages_replys?post_id={{ m[3] }}">
             <div><img src="/static/img/default.png" class="profileimg"><span class="uname">{{ m[0] }}</span>
             <br><br>
             <span class="pub_time">{{ m[1] }}</span></div>
-{% autoescape false %}
-            <p class="content">{{ m[2] }}</p>
-{% endautoescape %}
+            {% autoescape false %} <p class="content">{{ m[2] }}</p>{% endautoescape %}
             <p class="reply">回覆數:{{ m[4] }}</p>
-        </div></a>
+        </a>
+        </div>
+            
         {% endfor %}
+    </div>
+<div id="loadmore">
+<!-- Let me load for a while -->
+<div class="lds-hourglass"></div>
+<p id="loading_text">載入中...</p>
 
+</div>
 
 </body>
+<script src="./static/js/mb.js"></script>
 </html>
