--- a/templates/mod_reply.html
+++ b/templates/mod_reply.html
@@ -4,12 +4,12 @@
     <title>匿名曙光留言板 | 管理中心</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="./static/css/style.css" />
+    <link rel="stylesheet" href="/static/css/style.css" />
     <link rel="canonical" href="https://nicewhite.eu.org/message_board"/>
 </head>
 <body>
 <div class="navbar">
-  <a href="/message_board"><img src="./static/img/logo.png" alt="SGGS logo" >
+  <a href="/message_board"><img src="/static/img/logo.png" alt="SGGS logo" >
   <h1> 匿名留言板 | 管理中心</h1></a>
 </div>
 
