--- a/templates/mod_posts.html
+++ b/templates/mod_posts.html
@@ -30,12 +30,14 @@
 <hr><hr>
 {% for m in replys %}
         <div class="message">
+            <a class="messagelink" href="messages_replys?post_id={{ m[3] }}">
             <div><img src="/static/img/default.png" class="profileimg"><span class="uname">{{ m[0] }}</span>
             <br><br>
             <span class="pub_time">{{ m[1] }}</span></div>
 {% autoescape false %}
             <p class="content">{{ m[2] }}</p>
 {% endautoescape %}
+             </a>
         </div>
         {% endfor %}
 
