--- a/templates/moderation.html
+++ b/templates/moderation.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>匿名曙光留言板 | 管理中心</title>
+    <title>匿名曙光留言板 | C&M</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8" />
     <link rel="stylesheet" href="./static/css/style.css" />
-    <link rel="canonical" href="https://nicewhite.eu.org/message_board"/>
 </head>
 <body>
 <div class="navbar">
-  <a href="/"><img src="./static/img/logo.png" alt="SGGS logo" >
-  <h1>匿名留言板 | 管理中心</h1></a>
+  <a href="/mod"><img src="./static/img/logo.png" alt="SGGS logo" >
+  <h1>匿名留言板 | C&M</h1></a>
 </div>
 
 <div id="message_area">
