--- a/templates/message_board.html
+++ b/templates/message_board.html
@@ -38,7 +38,10 @@
             {% autoescape false %} <p class="content">{{ m[2] }}</p>{% endautoescape %}
             <p class="reply">回覆數:{{ m[4] }}</p>
             {% if m[5] %}
-            <p class="reply">管理員:此留言有部分可能不是事實</p>
+            <p class="reply">管理員:此留言有部分可能具有爭議</p>
+            {% endif %}
+            {% if m[6] %}
+            <p class="reply">此回覆已被管理員隱藏</p>
             {% endif %}
         </a>
         </div>
