delete most ugly response()

--- a/templates/login.html
+++ b/templates/login.html
@@ -15,8 +15,8 @@
             
             <form action="/login" method="POST">
                 <table>
-                    <tr><td>使用者名稱：</td><td><input type="text" id="uname" name="uname" placeholder="使用者名稱" autofocus></td></tr>
-                    <tr><td>密碼：</td><td><input type="password" id="upass" name="upass" placeholder="密碼"></td></tr>
+                    <tr><td>使用者名稱：</td><td><input type="text" id="uname" name="uname" placeholder="使用者名稱" autofocus required></td></tr>
+                    <tr><td>密碼：</td><td><input type="password" id="upass" name="upass" placeholder="密碼" required></td></tr>
                     <tr><td></td><td><button type="submit">登入</button>
                     <button type="button" onclick="location.href='/reg'">註冊</button></td></tr>
                     
