--- a/templates/message_board.html
+++ b/templates/message_board.html
@@ -17,7 +17,7 @@
         <div id="mb_form">
             <form action="/message_board" method="POST">
                 <table>
-                    <tr><td>留言：</td><td><textarea id="content" name="content" placeholder="請輸入留言內容"></textarea></td></tr>
+                    <tr><td>留言：</td><td><textarea id="content" name="content" placeholder="請輸入留言內容" required></textarea></td></tr>
                     <tr><td></td><td><button type="submit">送出</button>&emsp;<a href="/post_anonymous">前往匿名區</a></td></tr>
                 </table>
             </form>
