--- a/templates/replys.html
+++ b/templates/replys.html
@@ -50,7 +50,7 @@
 <div id="mb_form">
     <form method="POST">
         <table>
-            <tr><td>回覆：</td><td><textarea id="content" name="content" placeholder="請輸入回覆內容"></textarea></td></tr>
+            <tr><td>回覆：</td><td><textarea id="content" name="content" placeholder="請輸入回覆內容" required></textarea></td></tr>
             <tr><td></td><td><button type="submit">送出</button></td></tr>
         </table>
     </form>
