--- a/templates/post_anonymous.html
+++ b/templates/post_anonymous.html
@@ -23,7 +23,7 @@
 <div id="mb_form">
     <form method="POST">
         <table>
-            <tr><td>留言：</td><td><textarea id="content" name="content" placeholder="請輸入留言內容"></textarea></td></tr>
+            <tr><td>留言：</td><td><textarea id="content" name="content" placeholder="請輸入留言內容" required></textarea></td></tr>
             <tr><td></td><td><button type="submit">送出</button></td></tr>
         </table>
     </form>
