--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
           </div>
         <div id="reg_form">
             
-            <form action="/login" method="POST">
+            <form method="POST">
                 <table>
                     <tr><td>使用者名稱：</td><td><input type="text" id="uname" name="uname" placeholder="使用者名稱" autofocus required></td></tr>
                     <tr><td>密碼：</td><td><input type="password" id="upass" name="upass" placeholder="密碼" required></td></tr>
