--- a/templates/login.html
+++ b/templates/login.html
@@ -4,11 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>匿名曙光留言板 | 歡迎登入!</title>
-        <link rel="stylesheet" href="./static/css/style.css" />
+        <link rel="stylesheet" href="/static/css/style.css" />
     </head>
     <body>
         <div class="navbar">
-            <a href="/"><img src="./static/img/logo.png" alt="SGGS logo" >
+            <a href="/"><img src="/static/img/logo.png" alt="SGGS logo" >
             <h1 >匿名留言板</h1></a>
           </div>
         <div id="reg_form">
