--- a/templates/moderation.html
+++ b/templates/moderation.html
@@ -4,11 +4,11 @@
     <title>匿名曙光留言板 | C&M</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="./static/css/style.css" />
+    <link rel="stylesheet" href="/static/css/style.css" />
 </head>
 <body>
 <div class="navbar">
-  <a href="/mod"><img src="./static/img/logo.png" alt="SGGS logo" >
+  <a href="/mod"><img src="/static/img/logo.png" alt="SGGS logo" >
   <h1>匿名留言板 | C&M</h1></a>
 </div>
 
@@ -39,5 +39,5 @@
 
 
 </body>
-<script src="./static/js/mb.js"></script>
+<script src="/static/js/mb.js"></script>
 </html>
