--- a/templates/policy.html
+++ b/templates/policy.html
@@ -4,12 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>匿名曙光留言板 | Policy</title>
-        <link rel="stylesheet" href="./static/css/style.css" />
+        <link rel="stylesheet" href="/static/css/style.css" />
     </head>
 
 <body>
 <div class="navbar">
-    <a href="/"><img src="./static/img/logo.png" alt="SGGS logo" >
+    <a href="/"><img src="/static/img/logo.png" alt="SGGS logo" >
     <h1>匿名留言板</h1></a>
 </div>
 <p id="privacy">
