--- a/templates/post_anonymous.html
+++ b/templates/post_anonymous.html
@@ -4,11 +4,11 @@
     <title>匿名曙光留言板 | 匿名留言</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="./static/css/style.css" />
+    <link rel="stylesheet" href="/static/css/style.css" />
 </head>
 <body>
 <div class="navbar">
-  <a href="/"><img src="./static/img/logo.png" alt="SGGS logo" >
+  <a href="/"><img src="/static/img/logo.png" alt="SGGS logo" >
   <h1>匿名留言板</h1></a>
 </div>
 
