--- a/templates/reg.html
+++ b/templates/reg.html
@@ -25,6 +25,6 @@
                 </table>
             </form>
         </div>
-        <script src="{{ url_for('static', filename='js/reg.js') }}"></script>
+        <script src="/static/js/reg.js"></script>
     </body>
 </html>
