havent done. reaction test

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -362,3 +362,17 @@ hr{
     border: 2px solid #ffffff;
     border-radius: 57px;
 }
+
+#reaction{
+    margin-top: 40px;
+    margin-left: 20px;
+    margin-right: 20px;
+    padding: 20px;
+    font-family: 'Inter', sans-serif;
+    font-size: 20px;
+    color: #afafaf;;
+    background-color: #404040;
+    border: 2px solid #404040;
+    border-radius: 57px;
+    width: 50%;
+}
