--- a/templates/reg.html
+++ b/templates/reg.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>匿名曙光留言板 | 歡迎註冊!</title>
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+        <link rel="stylesheet" href="/static/css/style.css">
     </head>
     <body>
         <div class="navbar">
