--- a/templates/test.html
+++ b/templates/test.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/static/css/style.css">
     </head>
-
+<body>
     <div class="message">
         <a class="messagelink" href="messages_replys?post_id=">
         <div><img src="/static/img/default.png" class="profileimg"><span class="uname">uname</span>
@@ -14,19 +14,18 @@
  <p class="content">content</p>
         <p class="reply">回覆數:</p>
     </a>
+    <div id="reaction">
+        <a href="#" class="reaction_emotes" id="like">👍</a>
+        <a href="#" class="reaction_emotes" id="dislike">👎</a>
+        <a href="#" class="reaction_emotes" id="love">❤️</a>
+        <a href="#" class="reaction_emotes" id="angry">🤬</a>
+        <a href="#" class="reaction_emotes" id="sad">😢</a>
+        <a href="#" class="reaction_emotes" id="laugh">🤣</a>
+        <a href="#" class="reaction_emotes" id="surprise">😮</a>
+        <a href="#" class="reaction_emotes" id="speechless">😶</a>
     </div>
         
-</div>
-<div id="reaction">
-<a href="#" id="like">讚</a>
-<a href="#" id="dislike">踩</a>
-<a href="#" id="love">愛心</a>
-<a href="#" id="angry">生氣</a>
-<a href="#" id="cry">哭</a>
-<a href="#" id="laugh">笑</a>
-<a href="#" id="surprise">驚訝</a>
-</div>
-
+    </div>
 </body>
 <script src="/static/js/reaction_test.js"></script>
 </html>
