--- a/static/css/style.css
+++ b/static/css/style.css
@@ -364,15 +364,18 @@ hr{
 }
 
 #reaction{
+    display: none;
     margin-top: 40px;
     margin-left: 20px;
     margin-right: 20px;
     padding: 20px;
     font-family: 'Inter', sans-serif;
-    font-size: 20px;
-    color: #afafaf;;
-    background-color: #404040;
+    font-size: 30px;
+    color: #000000;;
+    background-color: #303030;
     border: 2px solid #404040;
     border-radius: 57px;
-    width: 50%;
+    width: 45%;
+    letter-spacing: 5px;
 }
+
