--- a/templates/message_board.html
+++ b/templates/message_board.html
@@ -46,14 +46,9 @@
             </a>
             {% if session.get("user_info") %}
             <div class="reaction" id="{{ m[3] }}">
-                <a class="reaction_emotes" id="like">👍</a>
-                <a class="reaction_emotes" id="dislike">👎</a>
-                <a class="reaction_emotes" id="love">❤️</a>
-                <a class="reaction_emotes" id="angry">🤬</a>
-                <a class="reaction_emotes" id="sad">😢</a>
-                <a class="reaction_emotes" id="laugh">🤣</a>
-                <a class="reaction_emotes" id="surprise">😮</a>
-                <a class="reaction_emotes" id="speechless">😶</a>
+                <a class="reaction_emotes" id="like">👍{{ m[7] }}</a>
+                <a class="reaction_emotes" id="dislike">👎{{ m[8] }}</a>
+                <a class="reaction_emotes" id="laugh">🤣{{ m[9] }}</a>
             </div>
             {% endif %}
         
